# ChronoVault

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  TodoService.cpp  icons.qrc  logo1-24.png24  main.cpp  style.qss
.github/workflows/: qt-ci-cd.yml
core/: AnniversaryItem.h  Moment.cpp  Moment.h  Reminder.cpp  Reminder.h  SharedFile.h  SubTask.h  TodoItem.cpp  TodoItem.h  TodoList.cpp  TodoList.h  anniversary.cpp  anniversary.h
gui/: AddAnniversaryDialog.cpp  AddAnniversaryDialog.h  AddMomentDialog.cpp  AddMomentDialog.h  AnniversaryDetailView.cpp  AnniversaryDetailView.h  AnniversaryDetailWidget.cpp  AnniversaryItemWidget.cpp  AnniversaryItemWidget.h  ClickableLabel.cpp  ClickableLabel.h  ClickableTextBrowser.h  ImageViewerDialog.cpp  ImageViewerDialog.h  MainWindow.cpp  MomentCardWidget.cpp  MomentCardWidget.h  MomentDetailDialog.cpp  MomentDetailDialog.h  NotificationWidget.cpp  NotificationWidget.h  ReminderDialog.cpp  ReminderDialog.h  ReminderSettingsDialog.cpp  ReminderSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h  TodoListNameWidget.cpp  TodoListNameWidget.h  TodoListSelectionDialog.cpp  TodoListSelectionDialog.h  ZoomableGraphicsView.cpp  ZoomableGraphicsView.h  addtododialog.cpp  addtododialog.h  completedheaderwidget.cpp  completedheaderwidget.h  mainwindow.h  subtaskitemwidget.cpp  subtaskitemwidget.h  (+4 more)
services/: AnniversaryService.cpp  AnniversaryService.h  NetworkService.cpp  NetworkService.h  TodoService.cpp  TodoService.h
